k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: saporitobite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: govindsingh3011/saporitobite-client:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
