k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server
  namespace: saporitobite

spec:
  replicas: 1

  selector:
    matchLabels:
      app: server

  template:
    metadata:
      labels:
        app: server

    spec:
      containers:
      - name: server

        image: govindsingh3011/saporitobite-server:latest

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"

          limits:
            memory: "128Mi"
            cpu: "500m"
