k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: saporitobite
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
