k8s/server-service.yml
apiVersion: v1
kind: Service

metadata:
  name: server-service
  namespace: saporitobite

spec:
  selector:
    app: server

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
