k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: saporitobite-ingress
  namespace: saporitobite

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: client-service

                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: server-service

                port:
                  number: 5000
